@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-05-27T08:19:34Z",
-  "count_outdated" : 293,
-  "uniques_outdated" : 161,
-  "count" : 323,
+  "timestamp" : "2022-05-28T01:15:21Z",
+  "count_outdated" : 295,
+  "uniques_outdated" : 162,
+  "count" : 324,
   "uniques" : 181,
   "clones" : [
-    {
-      "timestamp": "2022-05-13T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-05-14T00:00:00Z",
       "count": 3,
